Add gc enumeration to the two string members of the svgwrite device structure. Fixes a segfault with large input sets. Bug 690757.

Note that this requires a new suffix enumerator macro, since the
two strings case wasn't previously covered.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10067 a1074d23-0009-0410-80fe-cf8c14f379e6